Bug 1839954 - support async defer and module scripts r=emilio

https://www.w3.org/2012/01/05-svg-irc#T21-07-03 says that async and defer should be supported as does the specification https://www.w3.org/TR/SVG2/interact.html#ScriptElement

https://github.com/w3c/svgwg/issues/918 tracks getting the SVGScriptElement webidl updated.

Differential Revision: https://phabricator.services.mozilla.com/D181936