dom/base/Document.cpp
@@ -18114,12 +18114,12 @@ void Document::RecordNavigationTiming(ReadyState aReadyState) {
   }
 }
 
-bool Document::ModuleScriptsEnabled() {
+bool Document::ModuleScriptsEnabled() const {
   return nsContentUtils::IsChromeDoc(this) ||
          StaticPrefs::dom_moduleScripts_enabled();
 }
 
-bool Document::ImportMapsEnabled() {
+bool Document::ImportMapsEnabled() const {
   return nsContentUtils::IsChromeDoc(this) ||
          StaticPrefs::dom_importMaps_enabled();
 }
