dom/script/nsIScriptElement.h
@@ -106,10 +106,10 @@ class nsIScriptElement : public nsIScriptLoaderObserver {
    *  - GetScriptURI()
    *  - GetScriptExternal()
    */
-  virtual void FreezeExecutionAttrs(mozilla::dom::Document*) = 0;
+  virtual void FreezeExecutionAttrs(const mozilla::dom::Document*) = 0;
 
   /**
-   * Is the script a module script. Currently only supported by HTML scripts.
+   * Is the script a module script.
    */
   bool GetScriptIsModule() {
     MOZ_ASSERT(mFrozen, "Not ready for this call yet!");
@@ -117,7 +117,7 @@ class nsIScriptElement : public nsIScriptLoaderObserver {
   }
 
   /**
-   * Is the script an import map. Currently only supported by HTML scripts.
+   * Is the script an import map.
    */
   bool GetScriptIsImportMap() {
     MOZ_ASSERT(mFrozen, "Not ready for this call yet!");
@@ -125,7 +125,7 @@ class nsIScriptElement : public nsIScriptLoaderObserver {
   }
 
   /**
-   * Is the script deferred. Currently only supported by HTML scripts.
+   * Is the script deferred.
    */
   bool GetScriptDeferred() {
     MOZ_ASSERT(mFrozen, "Not ready for this call yet!");
@@ -133,7 +133,7 @@ class nsIScriptElement : public nsIScriptLoaderObserver {
   }
 
   /**
-   * Is the script async. Currently only supported by HTML scripts.
+   * Is the script async.
    */
   bool GetScriptAsync() {
     MOZ_ASSERT(mFrozen, "Not ready for this call yet!");
@@ -275,6 +275,11 @@ class nsIScriptElement : public nsIScriptLoaderObserver {
    * Allow implementing elements to avoid unnecessary QueryReferences.
    */
   virtual nsIContent* GetAsContent() = 0;
+
+  /**
+   * Determine whether this is a(n) classic/module/importmap script.
+   */
+  void DetermineKindFromType(const mozilla::dom::Document* aOwnerDoc);
 
   /**
    * The start line number of the script.
