dom/svg/SVGScriptElement.h
@@ -41,7 +41,7 @@ class SVGScriptElement final : public SVGScriptElementBase,
   // nsIScriptElement
   void GetScriptText(nsAString& text) const override;
   void GetScriptCharset(nsAString& charset) override;
-  void FreezeExecutionAttrs(Document* aOwnerDoc) override;
+  void FreezeExecutionAttrs(const Document* aOwnerDoc) override;
   CORSMode GetCORSMode() const override;
 
   // ScriptElement
@@ -59,6 +59,13 @@ class SVGScriptElement final : public SVGScriptElementBase,
   // WebIDL
   void GetType(nsAString& aType);
   void SetType(const nsAString& aType, ErrorResult& rv);
+  bool Async() { return mForceAsync || GetBoolAttr(nsGkAtoms::async); }
+  void SetAsync(bool aValue) {
+    mForceAsync = false;
+    SetBoolAttr(nsGkAtoms::async, aValue);
+  }
+  bool Defer() { return GetBoolAttr(nsGkAtoms::defer); }
+  void SetDefer(bool aDefer) { SetBoolAttr(nsGkAtoms::defer, aDefer); }
   void GetCrossOrigin(nsAString& aCrossOrigin);
   void SetCrossOrigin(const nsAString& aCrossOrigin, ErrorResult& aError);
   already_AddRefed<DOMSVGAnimatedString> Href();
