dom/webidl/SVGScriptElement.webidl
@@ -14,8 +14,9 @@
 interface SVGScriptElement : SVGElement {
   [SetterThrows]
   attribute DOMString type;
-
-  // CORS attribute
+  // See https://github.com/w3c/svgwg/issues/918
+  attribute boolean async;
+  attribute boolean defer;
   [SetterThrows]
   attribute DOMString? crossOrigin;
 };
